--- a/example.env
+++ b/example.env
@@ -6,5 +6,5 @@ DATABASES='
 MSSQL_SERVER='{server_host_name}\\{server_instance}'
 MSSQL_USER='{username}'
 MSSQL_PASSWORD='{password}'
-REPOSITORY_DIR='{path to data_warehouse repository path}'
-BACKUP_SUBDIR='ddl'
+REPOSITORY_PARENT_DIR='{path to repository parent directory path}'
+REPOSITORY_NAME='{repository name}'
